# stt_bot

./: .dockerignore  Dockerfile  Readme.md  main.py  pyproject.toml
app/: container.py  logger.py
app/adapters/: converter.py  speech_to_text.py
app/handlers/: audio_handler.py  fallbacks.py  start.py
app/res/: keyboards.py  messages.py  mime_types.py  states.py
app/settings/: app.py
